# agh_wfiis_oop1_labs

./: .gitignore  README.md
lab1/: MyArray.cpp  MyArray.h
lab10/: CMakeLists.txt  main.cpp
lab10/include/: Person.h  Persons.h  VectorQ.h
lab11/: main.cpp
lab11/include/: Car.h  Factory.h
lab12/: main.cpp
lab12/include/: assoc.h
lab13/: list.h  main.cpp
lab14/: main.cpp
lab14/include/: Functions.h  SecureCalc.h
lab14/src/: SecureCalc.cpp
lab2/: main.cpp
lab2/include/: ComplexNumber.h
lab2/src/: ComplexNumber.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: MyArray.h
lab3/src/: MyArray.cpp
lab4/: main.cpp
lab4/include/: FilterCriteria.h  Functors.h  List.h
lab4/src/: List.cpp
lab5/: main.cpp
lab5/include/: Division.h  Exponentiation.h  Operation.h  SumOfElements.h
lab5/src/: Division.cpp  Operation.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/include/: animalvirus.h  virus.h
lab6/src/: animalvirus.cpp  rna.cpp  virus.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/include/: Dir.h  Element.h  File.h
lab8/: main.h
lab8/include/: ClosedShape.h  Figures.h  Traits.h
lab9/: CMakeLists.txt  main.cpp
lab9/include/: Data.h  Sum.h  Table.h
lab9/src/: Data.cpp  Table.cpp
